solved svg lights overflow

--- a/public/css/main-room-mobile.css
+++ b/public/css/main-room-mobile.css
@@ -28,8 +28,8 @@
 
 @media only screen and (min-width: 1440px) {
   #svg-left-light {
-    left: -0.8rem;
-    top: 0.5rem;
+    left: -0.1rem;
+    top: -0.2rem;
   }
 }
 
